--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "keywords": [],
   "author": "Gabriel Delgado",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.18"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
